// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create-tinybase > js-react > should match snapshot 1`] = `
{
  "README.md": "# test-js-react

A TinyBase app built with JavaScript and React.

## Getting Started

\`\`\`bash
npm install
npm run dev
\`\`\`

## Learn More

- [TinyBase Documentation](https://tinybase.org)
- [TinyBase Examples](https://tinybase.org/demos/)
",
  "index.html": "<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>TinyBase</title>
  </head>
  <body>
    <div id="app"></div>
    <script type="module" src="/src/index.jsx"></script>
  </body>
</html>
",
  "package.json": "{
  "name": "test-js-react",
  "version": "1.0.0",
  "scripts": {
    "dev": "vite",
    "build": "vite build",
    "preview": "vite preview"
  },
  "devDependencies": {
    "vite": "^7.1.3",
    "@vitejs/plugin-react": "^4.3.4"
  },
  "dependencies": {
    "tinybase": "^6.6.0",
    "react": "^18.3.1",
    "react-dom": "^18.3.1"
  }
}
",
  "src/App.jsx": "import {createStore} from 'tinybase';
import {Provider, useValue} from 'tinybase/ui-react';
const store = createStore().setValue('count', 0);
const App = () =>
  /* @__PURE__ */ React.createElement(
    Provider,
    {store},
    /* @__PURE__ */ React.createElement('h1', null, 'TinyBase + React'),
    /* @__PURE__ */ React.createElement(Counter, null),
  );
const Counter = () => {
  const count = useValue('count', store);
  return /* @__PURE__ */ React.createElement(
    'div',
    null,
    /* @__PURE__ */ React.createElement('p', null, 'Count: ', count),
    /* @__PURE__ */ React.createElement(
      'button',
      {onClick: () => store.setValue('count', (c) => c + 1)},
      'Increment',
    ),
  );
};
export {App};
",
  "src/index.css": "body {
  color: #bbb;
  background: #111;
  font-family: 'Inter', sans-serif;
  user-select: none;
}

#app {
  max-width: 40rem;
  margin: 2rem auto;
  display: grid;
  grid-template-columns: 1fr;
  column-gap: 2rem;
  align-items: start;
  row-gap: 1rem;
}

a {
  color: #bbb;
}

h1 {
  font-weight: 600;
  img {
    margin-right: 1rem;
    height: 2.5rem;
    vertical-align: text-bottom;
  }
}

h2 {
  text-align: center;
  font-weight: 800;
  font-size: 1.3rem;
  margin: 1rem 0 0;
}

#buttons {
  border: solid #666;
  border-width: 1px 0;
  text-align: center;
}

#buttons button {
  border: 1px solid #666;
  border-radius: 0.25rem;
  padding: 0.5rem 1rem;
  background: #222;
  color: #fff;
  font-family: inherit;
  font-weight: 800;
  font-size: 0.8rem;
  width: 10rem;
  margin: 1rem;
}
#buttons button:hover {
  border-color: #d81b60;
}

table {
  border-collapse: collapse;
  font-size: inherit;
  line-height: inherit;
  margin-top: 0.5rem;
  table-layout: fixed;
  width: 100%;
  margin-bottom: 2rem;
  caption-side: bottom;
}
table caption {
  text-align: left;
  button {
    border: 0;
    margin-right: 0.25rem;
  }
}
table caption button {
  line-height: 0.7rem;
  margin: 0 0.25rem 0 0;
  vertical-align: middle;
}
th,
td {
  padding: 0.25rem 0.5rem 0.25rem 0;
  text-align: left;
}
thead th,
thead td {
  border: solid #999;
  border-width: 1px 0;
}
tbody th,
tbody td {
  border-bottom: 1px solid #333;
}

table.sortedTable thead th {
  cursor: pointer;
}

@media (min-width: 40rem) {
  #app {
    grid-template-columns: 1fr 1fr;
  }
  header,
  p,
  #buttons {
    grid-column: span 2;
  }
}
",
  "src/index.jsx": "import './index.css';
import ReactDOM from 'react-dom/client';
import {App} from './App';
addEventListener('load', () =>
  ReactDOM.createRoot(document.getElementById('app')).render(
    /* @__PURE__ */ React.createElement(App, null),
  ),
);
",
  "vite.config.js": "import {defineConfig} from 'vite';

export default defineConfig({});
",
}
`;

exports[`create-tinybase > js-vanilla > should match snapshot 1`] = `
{
  "README.md": "# test-js-vanilla

A TinyBase app built with JavaScript and Vanilla JS.

## Getting Started

\`\`\`bash
npm install
npm run dev
\`\`\`

## Learn More

- [TinyBase Documentation](https://tinybase.org)
- [TinyBase Examples](https://tinybase.org/demos/)
",
  "index.html": "<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>TinyBase</title>
  </head>
  <body>
    <script type="module" src="/src/index.js"></script>
  </body>
</html>
",
  "package.json": "{
  "name": "test-js-vanilla",
  "version": "1.0.0",
  "scripts": {
    "dev": "vite",
    "build": "vite build",
    "preview": "vite preview"
  },
  "devDependencies": {
    "vite": "^7.1.3"
  },
  "dependencies": {
    "tinybase": "^6.6.0"
  }
}
",
  "src/index.css": "body {
  color: #bbb;
  background: #111;
  font-family: 'Inter', sans-serif;
  user-select: none;
}

#app {
  max-width: 40rem;
  margin: 2rem auto;
  display: grid;
  grid-template-columns: 1fr;
  column-gap: 2rem;
  align-items: start;
  row-gap: 1rem;
}

a {
  color: #bbb;
}

h1 {
  font-weight: 600;
  img {
    margin-right: 1rem;
    height: 2.5rem;
    vertical-align: text-bottom;
  }
}

h2 {
  text-align: center;
  font-weight: 800;
  font-size: 1.3rem;
  margin: 1rem 0 0;
}

#buttons {
  border: solid #666;
  border-width: 1px 0;
  text-align: center;
}

#buttons button {
  border: 1px solid #666;
  border-radius: 0.25rem;
  padding: 0.5rem 1rem;
  background: #222;
  color: #fff;
  font-family: inherit;
  font-weight: 800;
  font-size: 0.8rem;
  width: 10rem;
  margin: 1rem;
}
#buttons button:hover {
  border-color: #d81b60;
}

table {
  border-collapse: collapse;
  font-size: inherit;
  line-height: inherit;
  margin-top: 0.5rem;
  table-layout: fixed;
  width: 100%;
  margin-bottom: 2rem;
  caption-side: bottom;
}
table caption {
  text-align: left;
  button {
    border: 0;
    margin-right: 0.25rem;
  }
}
table caption button {
  line-height: 0.7rem;
  margin: 0 0.25rem 0 0;
  vertical-align: middle;
}
th,
td {
  padding: 0.25rem 0.5rem 0.25rem 0;
  text-align: left;
}
thead th,
thead td {
  border: solid #999;
  border-width: 1px 0;
}
tbody th,
tbody td {
  border-bottom: 1px solid #333;
}

table.sortedTable thead th {
  cursor: pointer;
}

@media (min-width: 40rem) {
  #app {
    grid-template-columns: 1fr 1fr;
  }
  header,
  p,
  #buttons {
    grid-column: span 2;
  }
}
",
  "src/index.js": "import './index.css';
import {createStore} from 'tinybase';
const onClick = (id, onClick2) =>
  document.getElementById(id).addEventListener('click', onClick2);
const updateJson = (id, content) =>
  (document.getElementById(id).innerText = JSON.stringify(content, null, 2));
const getRandom = (max = 100) => Math.floor(Math.random() * max);
addEventListener('load', () => {
  const store = createStore();
  onClick('countButton', () => store.setValue('counter', (value) => value + 1));
  onClick('randomButton', () => store.setValue('random', getRandom()));
  onClick('addPetButton', () =>
    store.addRow('pets', {
      name: ['fido', 'felix', 'bubbles', 'lowly', 'polly'][getRandom(5)],
      species: store.getRowIds('species')[getRandom(5)],
    }),
  );
  store.addValuesListener(() => updateJson('valuesJson', store.getValues()));
  store.addTablesListener(() => updateJson('tablesJson', store.getTables()));
  store
    .setValue('counter', 0)
    .setRow('pets', '0', {name: 'fido', species: 'dog'})
    .setTable('species', {
      dog: {price: 5},
      cat: {price: 4},
      fish: {price: 2},
      worm: {price: 1},
      parrot: {price: 3},
    });
});
",
}
`;

exports[`create-tinybase > ts-react > should match snapshot 1`] = `
{
  "README.md": "# test-ts-react

A TinyBase app built with TypeScript and React.

## Getting Started

\`\`\`bash
npm install
npm run dev
\`\`\`

## Learn More

- [TinyBase Documentation](https://tinybase.org)
- [TinyBase Examples](https://tinybase.org/demos/)
",
  "index.html": "<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>TinyBase</title>
  </head>
  <body>
    <div id="app"></div>
    <script type="module" src="/src/index.tsx"></script>
  </body>
</html>
",
  "package.json": "{
  "name": "test-ts-react",
  "version": "1.0.0",
  "scripts": {
    "dev": "vite",
    "build": "tsc && vite build",
    "preview": "vite preview"
  },
  "devDependencies": {
    "vite": "^7.1.3",
    "typescript": "^5.9.3",
    "@types/node": "^25.0.3",
    "@types/react": "^18.3.18",
    "@types/react-dom": "^18.3.5",
    "@vitejs/plugin-react": "^4.3.4"
  },
  "dependencies": {
    "tinybase": "^6.6.0",
    "react": "^18.3.1",
    "react-dom": "^18.3.1"
  }
}
",
  "src/App.jsx": "import {createStore} from 'tinybase';
import {Provider, useValue} from 'tinybase/ui-react';
const store = createStore().setValue('count', 0);
const App = () =>
  /* @__PURE__ */ React.createElement(
    Provider,
    {store},
    /* @__PURE__ */ React.createElement('h1', null, 'TinyBase + React'),
    /* @__PURE__ */ React.createElement(Counter, null),
  );
const Counter = () => {
  const count = useValue('count', store);
  return /* @__PURE__ */ React.createElement(
    'div',
    null,
    /* @__PURE__ */ React.createElement('p', null, 'Count: ', count),
    /* @__PURE__ */ React.createElement(
      'button',
      {onClick: () => store.setValue('count', (c) => c + 1)},
      'Increment',
    ),
  );
};
export {App};
",
  "src/index.css": "body {
  color: #bbb;
  background: #111;
  font-family: 'Inter', sans-serif;
  user-select: none;
}

#app {
  max-width: 40rem;
  margin: 2rem auto;
  display: grid;
  grid-template-columns: 1fr;
  column-gap: 2rem;
  align-items: start;
  row-gap: 1rem;
}

a {
  color: #bbb;
}

h1 {
  font-weight: 600;
  img {
    margin-right: 1rem;
    height: 2.5rem;
    vertical-align: text-bottom;
  }
}

h2 {
  text-align: center;
  font-weight: 800;
  font-size: 1.3rem;
  margin: 1rem 0 0;
}

#buttons {
  border: solid #666;
  border-width: 1px 0;
  text-align: center;
}

#buttons button {
  border: 1px solid #666;
  border-radius: 0.25rem;
  padding: 0.5rem 1rem;
  background: #222;
  color: #fff;
  font-family: inherit;
  font-weight: 800;
  font-size: 0.8rem;
  width: 10rem;
  margin: 1rem;
}
#buttons button:hover {
  border-color: #d81b60;
}

table {
  border-collapse: collapse;
  font-size: inherit;
  line-height: inherit;
  margin-top: 0.5rem;
  table-layout: fixed;
  width: 100%;
  margin-bottom: 2rem;
  caption-side: bottom;
}
table caption {
  text-align: left;
  button {
    border: 0;
    margin-right: 0.25rem;
  }
}
table caption button {
  line-height: 0.7rem;
  margin: 0 0.25rem 0 0;
  vertical-align: middle;
}
th,
td {
  padding: 0.25rem 0.5rem 0.25rem 0;
  text-align: left;
}
thead th,
thead td {
  border: solid #999;
  border-width: 1px 0;
}
tbody th,
tbody td {
  border-bottom: 1px solid #333;
}

table.sortedTable thead th {
  cursor: pointer;
}

@media (min-width: 40rem) {
  #app {
    grid-template-columns: 1fr 1fr;
  }
  header,
  p,
  #buttons {
    grid-column: span 2;
  }
}
",
  "src/index.jsx": "import './index.css';
import ReactDOM from 'react-dom/client';
import {App} from './App';
addEventListener('load', () =>
  ReactDOM.createRoot(document.getElementById('app')).render(
    /* @__PURE__ */ React.createElement(App, null),
  ),
);
",
  "tsconfig.json": "{
  "compilerOptions": {
    "target": "ES2020",
    "useDefineForClassFields": true,
    "module": "ESNext",
    "lib": ["ES2020", "DOM", "DOM.Iterable"],
    "skipLibCheck": true,
    "moduleResolution": "bundler",
    "allowImportingTsExtensions": true,
    "isolatedModules": true,
    "moduleDetection": "force",
    "noEmit": true,
    "jsx": "react-jsx",
    "strict": true,
    "noUnusedLocals": true,
    "noUnusedParameters": true,
    "noFallthroughCasesInSwitch": true,
    "noUncheckedSideEffectImports": true
  },
  "include": ["src"]
}
",
  "tsconfig.node.json": "{
  "compilerOptions": {
    "module": "ESNext",
    "moduleResolution": "bundler",
    "allowSyntheticDefaultImports": true,
    "strict": true,
    "skipLibCheck": true
  }
}
",
  "vite.config.js": "import {defineConfig} from 'vite';

export default defineConfig({});
",
}
`;

exports[`create-tinybase > ts-vanilla > should match snapshot 1`] = `
{
  "README.md": "# test-ts-vanilla

A TinyBase app built with TypeScript and Vanilla JS.

## Getting Started

\`\`\`bash
npm install
npm run dev
\`\`\`

## Learn More

- [TinyBase Documentation](https://tinybase.org)
- [TinyBase Examples](https://tinybase.org/demos/)
",
  "index.html": "<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>TinyBase</title>
  </head>
  <body>
    <script type="module" src="/src/index.ts"></script>
  </body>
</html>
",
  "package.json": "{
  "name": "test-ts-vanilla",
  "version": "1.0.0",
  "scripts": {
    "dev": "vite",
    "build": "tsc && vite build",
    "preview": "vite preview"
  },
  "devDependencies": {
    "vite": "^7.1.3",
    "typescript": "^5.9.3",
    "@types/node": "^25.0.3"
  },
  "dependencies": {
    "tinybase": "^6.6.0"
  }
}
",
  "src/index.css": "body {
  color: #bbb;
  background: #111;
  font-family: 'Inter', sans-serif;
  user-select: none;
}

#app {
  max-width: 40rem;
  margin: 2rem auto;
  display: grid;
  grid-template-columns: 1fr;
  column-gap: 2rem;
  align-items: start;
  row-gap: 1rem;
}

a {
  color: #bbb;
}

h1 {
  font-weight: 600;
  img {
    margin-right: 1rem;
    height: 2.5rem;
    vertical-align: text-bottom;
  }
}

h2 {
  text-align: center;
  font-weight: 800;
  font-size: 1.3rem;
  margin: 1rem 0 0;
}

#buttons {
  border: solid #666;
  border-width: 1px 0;
  text-align: center;
}

#buttons button {
  border: 1px solid #666;
  border-radius: 0.25rem;
  padding: 0.5rem 1rem;
  background: #222;
  color: #fff;
  font-family: inherit;
  font-weight: 800;
  font-size: 0.8rem;
  width: 10rem;
  margin: 1rem;
}
#buttons button:hover {
  border-color: #d81b60;
}

table {
  border-collapse: collapse;
  font-size: inherit;
  line-height: inherit;
  margin-top: 0.5rem;
  table-layout: fixed;
  width: 100%;
  margin-bottom: 2rem;
  caption-side: bottom;
}
table caption {
  text-align: left;
  button {
    border: 0;
    margin-right: 0.25rem;
  }
}
table caption button {
  line-height: 0.7rem;
  margin: 0 0.25rem 0 0;
  vertical-align: middle;
}
th,
td {
  padding: 0.25rem 0.5rem 0.25rem 0;
  text-align: left;
}
thead th,
thead td {
  border: solid #999;
  border-width: 1px 0;
}
tbody th,
tbody td {
  border-bottom: 1px solid #333;
}

table.sortedTable thead th {
  cursor: pointer;
}

@media (min-width: 40rem) {
  #app {
    grid-template-columns: 1fr 1fr;
  }
  header,
  p,
  #buttons {
    grid-column: span 2;
  }
}
",
  "src/index.js": "import './index.css';
import {createStore} from 'tinybase';
const onClick = (id, onClick2) =>
  document.getElementById(id).addEventListener('click', onClick2);
const updateJson = (id, content) =>
  (document.getElementById(id).innerText = JSON.stringify(content, null, 2));
const getRandom = (max = 100) => Math.floor(Math.random() * max);
addEventListener('load', () => {
  const store = createStore();
  onClick('countButton', () => store.setValue('counter', (value) => value + 1));
  onClick('randomButton', () => store.setValue('random', getRandom()));
  onClick('addPetButton', () =>
    store.addRow('pets', {
      name: ['fido', 'felix', 'bubbles', 'lowly', 'polly'][getRandom(5)],
      species: store.getRowIds('species')[getRandom(5)],
    }),
  );
  store.addValuesListener(() => updateJson('valuesJson', store.getValues()));
  store.addTablesListener(() => updateJson('tablesJson', store.getTables()));
  store
    .setValue('counter', 0)
    .setRow('pets', '0', {name: 'fido', species: 'dog'})
    .setTable('species', {
      dog: {price: 5},
      cat: {price: 4},
      fish: {price: 2},
      worm: {price: 1},
      parrot: {price: 3},
    });
});
",
  "tsconfig.json": "{
  "compilerOptions": {
    "target": "ES2020",
    "useDefineForClassFields": true,
    "module": "ESNext",
    "lib": ["ES2020", "DOM", "DOM.Iterable"],
    "skipLibCheck": true,
    "moduleResolution": "bundler",
    "allowImportingTsExtensions": true,
    "isolatedModules": true,
    "moduleDetection": "force",
    "noEmit": true,
    "strict": true,
    "noUnusedLocals": true,
    "noUnusedParameters": true,
    "noFallthroughCasesInSwitch": true,
    "noUncheckedSideEffectImports": true
  },
  "include": ["src"]
}
",
  "tsconfig.node.json": "{
  "compilerOptions": {
    "module": "ESNext",
    "moduleResolution": "bundler",
    "allowSyntheticDefaultImports": true,
    "strict": true,
    "skipLibCheck": true
  }
}
",
}
`;
